[package]
name = "krak-it"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
account-service = { version = "0.1.0", path = "../account-service" }
color-eyre = "0.6.1"
csv-async = { version = "1.2.4", features = ["tokio"] }
futures-util = "0.3.21"
tokio = { version = "1.18.2", features = ["full"] }
tokio-stream = "0.1.8"
tracing = "0.1.34"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.11", features = ["fmt"] }
transaction = { version = "0.1.0", path = "../transaction" }

[dev-dependencies]
async-stream = "0.3.3"
