[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
async-trait = "0.1.53"
futures = "0.3.21"
serde_json = "1.0.81"
sled = "0.34.7"
thiserror = "1.0.31"
tokio = "1.18.2"
transaction = { version = "0.1.0", path = "../transaction" }
