[package]
name = "transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
csv-async = { version = "1.2.4", features = ["tokio"] }
enum-display-derive = "0.1.1"
futures-util = "0.3.21"
rust_decimal = { version = "1.23.1", features = ["serde", "serde-with-str"] }
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["io-util"] }
tracing = "0.1.34"

[dev-dependencies]
serde_json = "1.0.81"
